<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="mainViewModel"
            type="com.example.musicsearchapp.ui.main.MainViewModel" />

        <variable
            name="adapter"
            type="com.example.musicsearchapp.ui.main.MainAdapter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/dp_32"
            android:padding="@dimen/dp_16"
            android:text="@string/app_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_2"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@={mainViewModel.search}"
                android:hint="@string/search_hint"
                android:autofillHints="" />

            <Button
                android:id="@+id/btn_search"
                android:onClick="@{() -> mainViewModel.search()}"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hideIfSaved="@{mainViewModel.hideButton}"
            android:visibility="gone"
            android:weightSum="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:layout_weight="0.1"/>

            <Button
                android:id="@+id/btn_up"
                android:onClick="@{() -> mainViewModel.sortList(adapter, 1)}"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/upward"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_down"
                android:onClick="@{() -> mainViewModel.sortList(adapter, 0)}"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/descending"
                android:textAllCaps="false"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hideIfSaved="@{mainViewModel.hideProgress}"
            android:layout_gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            setAdapter="@{adapter}"/>

    </LinearLayout>
</layout>